--- a/lib/client/app/application/global/dialogs/passwordReset.html
+++ b/lib/client/app/application/global/dialogs/passwordReset.html
@@ -3,10 +3,11 @@
 </style>
 <div class="secondary-dialog-curtain" ng-show="reset_password_visible == true" ng-controller="lightweightController">
     <md-card class="suite-dialog md-card-base card inputs">
-        <md-card-title>
+        <md-card-title style="position: relative;" layout="row" layout-align="start center" layout-gt-sm="row" layout-align-gt-sm="center center" layout-wrap>
             <md-card-title-text>
                 <span class="md-headline">Reset Password</span>
             </md-card-title-text>
+            <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you want to cancel?" ng-confirm-click="closePasswordReset()" ng-confirm-condition="true">close</md-icon>
         </md-card-title>
         <md-card-content flex>
             <md-content class="md-padding" flex>
@@ -36,7 +37,7 @@
                                     </md-list-item>
                                     <div layout-padding layout="row" layout-align="end center">
                                         <div>
-                                            <md-button ng-click="closePasswordReset()" style="background: transparent;">
+                                            <md-button ng-confirm-message="Are you sure you want to cancel?" ng-confirm-click="closePasswordReset()" ng-confirm-condition="true" style="background: transparent;">
                                             Cancel
                                             </md-button>
                                             <md-button type="submit" ng-click="passReset(resetUser)" class="md-raised" style="background: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};" >
@@ -51,10 +52,10 @@
                 </div>
             </md-content>
         </md-card-content>
-        <md-card-actions layout="row" layout-align="end center">
+        <!-- <md-card-actions layout="row" layout-align="end center">
             <md-button disabled>Superpowered by Lightweight</md-button>
             <div flex></div>
             <md-button class="md-raised" ng-click="closePasswordReset()" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">Close</md-button>
-        </md-card-actions>
+        </md-card-actions> -->
     </md-card>
 </div>
