--- a/lib/client/app/application/global/dialogs/editor.html
+++ b/lib/client/app/application/global/dialogs/editor.html
@@ -12,7 +12,7 @@
             </md-button>
 
             <md-button ng-show="editor_element.settings.configs.reorder_content == true" ng-class="{'raised-button': items_sortable}" class="md-fab md-mini" aria-label="Enable Draggable" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;" ng-click="items_sortable = items_sortable ? false : true">
-                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">drag_handle</md-icon>
+                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">low_priority</md-icon>
             </md-button>
 
             <!-- Add Contnet Pages -->
@@ -159,7 +159,7 @@
             
             <md-icon ng-confirm-message="Are you sure you want to save your changes?" ng-confirm-click="updateApp(editor_element)" ng-confirm-condition="true" style="color: {{base_hue_darkest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">done</md-icon>
 
-            <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you want to cancel editing?" ng-confirm-click="end_edit()" ng-confirm-condition="true">close</md-icon>
+            <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer; margin-left: 16px;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you want to cancel editing?" ng-confirm-click="end_edit()" ng-confirm-condition="true">close</md-icon>
 
         </md-card-title>
     <!-- Dialog Editor | Header -->
@@ -194,7 +194,7 @@
             <!-- Content Editor -->
             <div flex flex-gt-sm="40" style="width: 100%">
                 <md-card class="md-card-base">
-                    <md-card-content>
+                    <md-card-content style="border: 1px solid rgba(0,0,0,.15);">
 
                         <!-- if it's an element with a title, subtitle, etc. -->
 
