--- a/lib/client/app/application/global/dialogs/tasksDetail.html
+++ b/lib/client/app/application/global/dialogs/tasksDetail.html
@@ -24,9 +24,7 @@
 
             <span flex></span>
 
-            <md-button style="background-color: {{base_hue_lighter.value}}" class="md-fab md-mini" aria-label="cancel new task creation" ng-confirm-message="Are you sure you want to cancel adding a new task?" ng-confirm-click="closeUpdateTask(); clearTaskModel(taskUpdateForm)" ng-confirm-condition="true">
-                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">close</md-icon>
-            </md-button>
+            <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you want to cancel adding a new task?" ng-confirm-click="closeUpdateTask(); clearTaskModel(taskUpdateForm)" ng-confirm-condition="true">close</md-icon>
             
         </md-card-title>
 
