--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -1,4 +1,4 @@
-<div class="dialog-curtain" ng-show="edit_configuration_dialog_visible == true">
+<div class="dialog-curtain settings" ng-show="edit_configuration_dialog_visible == true">
     
     <md-card class="suite-dialog md-card-base">
 
