--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -1,4 +1,4 @@
-<div class="dialog-curtain" ng-show="task_runner_visible == true">
+<div class="dialog-curtain taskrunner" ng-show="task_runner_visible == true">
     <md-card class="suite-dialog md-card-base">
 
         <div ng-include src="'application/partials/backend-menu.html'"></div>
