--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -332,7 +332,7 @@
                                     <md-list-item>
                                         <md-input-container class="md-block lightweight-md-input" flex>
                                             <label>What type of task is this?</label>
-                                            <md-select name="typeOfTrigger" ng-model="taskAddObj.taskType" ng-required="true">
+                                            <md-select name="typeOfTrigger" ng-model="taskAddObj.task_type" ng-required="true">
                                                 <md-option><em>None</em></md-option>
                                                 <md-option ng-value="'onetime'">
                                                     One Time
@@ -353,7 +353,7 @@
                                         </md-input-container>
                                     </md-list-item>
 
-                                    <span ng-show="taskAddObj.taskType == 'onetime' || taskAddObj.taskType == 'reoccuring'">
+                                    <span ng-show="taskAddObj.task_type == 'onetime' || taskAddObj.task_type == 'reoccuring'">
 
                                         <md-card-header>
                                             <md-card-header-text>
@@ -362,14 +362,10 @@
                                             </md-card-header-text>
                                         </md-card-header>                                        
                                                             
-                                        <md-list-item ng-show="taskAddObj.taskType == 'reoccuring'">
+                                        <md-list-item ng-show="taskAddObj.task_type == 'reoccuring'">
                                             <md-input-container class="md-block lightweight-md-input" flex>
                                                 <label>How Often Does This Task Run?</label>
-                                                <md-select ng-model="taskAddObj.frequency" name="createTaskForm.frequency" ng-required="taskAddObj.taskType == 'reoccuring'">
-                                                    <md-option><em>None</em></md-option>
-                                                    <md-option ng-value="'onCreate'">
-                                                        Once Created
-                                                    </md-option>
+                                                <md-select ng-model="taskAddObj.frequency" name="createTaskForm.frequency" ng-required="taskAddObj.task_type == 'reoccuring'">
                                                     <md-option ng-value="'daily'">
                                                         Daily
                                                     </md-option>
@@ -416,7 +412,7 @@
                                             </div>
                                         </md-list-item>
                                         
-                                        <md-list-item ng-show="taskAddObj.frequency != 'daily' || taskAddObj.taskType != 'onetime'">
+                                        <md-list-item ng-show="taskAddObj.frequency != 'daily' || taskAddObj.task_type != 'onetime'">
                                             <md-input-container class="md-block lightweight-md-input" flex>
                                                 <label>Choose Which Day To Run The Task</label>
                                                 <md-select ng-model="taskAddObj.run_day" ng-required="taskAddObj.frequency !='daily' || taskAddObj.frequency !='weekly'" name="createTaskForm.run_day">
@@ -449,8 +445,8 @@
                                             </div>
                                         </md-list-item>
 
-                                        <md-list-item ng-show="taskAddObj.taskType == 'onetime'">
-                                            <md-input-container class="md-block lightweight-md-input" ng-required="taskAddObj.taskType == 'onetime'" flex>
+                                        <md-list-item ng-show="taskAddObj.task_type == 'onetime'">
+                                            <md-input-container class="md-block lightweight-md-input" ng-required="taskAddObj.task_type == 'onetime'" flex>
                                                 <label>Specify A Date To Run This Task</label>
 
                                                 <md-datepicker flex="80" ng-model="taskAddObj.task_date" name="task_date" md-placeholder="No Date Chosen" md-open-on-focus></md-datepicker>
