--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -86,75 +86,25 @@
                 <md-card class="md-card-base" style="background: #fafafa; border: 1px solid rgba(33,33,33,.15);" flex="100">
                         <md-card-header>
                             <md-card-header-text>
-                                <span class="md-title">Reports</span>
-                                <span class="md-subhead">Task Reports &amp; Notifications</span>
+                                <span class="md-title">App Notifications</span>
+                                <span class="md-subhead">Incoming Leads</span>
                             </md-card-header-text>
                         </md-card-header>
                         <md-card-content>
                             <md-tabs md-dynamic-height md-border-bottom>
-                                <md-tab label="Notifications">
+                                <md-tab label="Leads">
                                     <md-content style="padding: 0;">
                                         <div layout="column" layout-align="center stretch" style="margin: 0" flex>
-                                            <md-list class="md-dense" flex>
-                                                <!-- <md-list-item flex>
-                                                    <md-menu>
-                                                        <md-button class="md-icon-button">
-                                                            <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="notification menu" md-font-library="material-icons">more_vert</md-icon>
-                                                        </md-button>
-                                                        <md-menu-content width="4">
-                                                            <md-menu-item>
-                                                                <md-button>
-                                                                View Notification
-                                                                </md-button>
-                                                            </md-menu-item>
-                                                            <md-menu-item>
-                                                                <md-button>
-                                                                Dismiss Notification
-                                                                </md-button>
-                                                            </md-menu-item>
-                                                        </md-menu-content>
-                                                    </md-menu>
-                                                    <div class="md-list-item-text">
-                                                        <p style="font-size: 16px;">07/02 - New Lead Submission</p>
-                                                    </div>
-                                                    <md-divider></md-divider>
-                                                </md-list-item> -->                                                
-                                                <md-list-item flex>
-                                                    <p>You don't have any notifications yet.</p>
-                                                </md-list-item>
-                                                
-                                            </md-list>
-                                        </div>
-                                    </md-content>
-                                </md-tab>
-                                <md-tab label="Task Run Reports">
-                                    <md-content style="padding: 0;">
-                                        <div layout="column" layout-align="center stretch" style="margin: 0" flex>
-                                            <md-list class="md-dense" flex>
-                                                <!-- <md-list-item class="md-2-line" flex>
-                                                    <div class="md-list-item-text">
-                                                        <br>
-                                                        <h3 style="font-size: 16px;">07/02 - New Blog Post Task Report</h3>
-                                                        <br>
-                                                        <p style="font-size: 16px;">Successful Email Deliveries | 99</p>
-                                                        <p style="font-size: 16px;">Failed Email Deliveries | 1</p>
-                                                        <br>
-                                                        <p style="font-size: 16px;">Successful Notification Deliveries | 100</p>
-                                                        <p style="font-size: 16px;">Failed Notification Deliveries | 0</p>
-                                                        <br>
-                                                    </div>
-                                                </md-list-item>
-                                                <md-divider></md-divider> -->
+                                            <md-list class="md-dense" flex>                                              
                                                 <md-list-item class="md-2-line" flex>
                                                     <div class="md-list-item-text">
-                                                        <p>You don't have any task run reports yet.</p>
+                                                        <p>You don't have any leads yet.</p>
                                                     </div>
                                                 </md-list-item>
-                                                <md-divider></md-divider>
                                             </md-list>
                                         </div>
                                     </md-content>
-                                </md-tab>
+                                </md-tab>                                
                             </md-tabs>
                     </md-card-content>
                 </md-card>
