--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -87,7 +87,7 @@
                         <md-card-header>
                             <md-card-header-text>
                                 <span class="md-title">App Notifications</span>
-                                <span class="md-subhead">Incoming Leads</span>
+                                <span class="md-subhead">Message Pipeline</span>
                             </md-card-header-text>
                         </md-card-header>
                         <md-card-content>
