--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -16,60 +16,10 @@
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add User" md-font-library="material-icons">menu</md-icon>
             </md-button>
 
-            <!-- =================== Upload Various Resources =================== -->
-            <md-menu>
-                <md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="openMenu($mdMenu, $event)" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;">
-                    <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">cloud_upload</md-icon>
-                </md-button>
-                <md-menu-content width="4">
-                    <md-menu-item>
-                        <md-button ngf-select="uploadMyFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.doc,.docx'" ngf-accept="'.doc,.docx'" ngf-max-size="20MB">
-                            Word Document
-                        </md-button>
-                    </md-menu-item>
-                    <md-menu-item>
-                        <md-button ngf-select="uploadMyFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.xls,.xlsx'" ngf-accept="'.xls,.xlsx'" ngf-max-size="20MB">
-                            Excel Document
-                        </md-button>
-                    </md-menu-item>
-                    <md-menu-item>
-                        <md-button ngf-select="uploadMyFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.ppt,.pptx'" ngf-accept="'.ppt,.pptx'" ngf-max-size="20MB">
-                            Powerpoint Document
-                        </md-button>
-                    </md-menu-item>
-                    <md-menu-item>
-                        <md-button ngf-select="uploadMyFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.pdf'" ngf-accept="'.pdf'" ngf-max-size="20MB">
-                            PDF Document
-                        </md-button>
-                    </md-menu-item>
-                    <md-menu-item>
-                        <md-button ngf-select="uploadMyFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB">
-                            Image
-                        </md-button>
-                    </md-menu-item>
-                    <md-menu-item>
-                        <md-button ngf-select="uploadMyFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.mp4'" ngf-accept="'video/mp4'" ngf-max-size="20MB">
-                            MP4 Video
-                        </md-button>
-                    </md-menu-item>
-                    <md-menu-item>
-                        <md-button ngf-select="uploadMyFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.zip'" ngf-accept="'application/zip,application/x-zip-compressed'" ngf-max-size="50MB">
-                            Zipped File
-                        </md-button>
-                    </md-menu-item>
-                    <md-menu-item>
-                        <md-button ng-click="openIframeUpload()">
-                            Iframe
-                        </md-button>
-                    </md-menu-item>
-                </md-menu-content>
-            </md-menu>
-            <!-- =================== Upload Various Resources =================== -->
-
             <!-- =================== Action Buttons - Account =================== -->
             <md-menu>
                 
-                <md-button md-menu-origin ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="open options" style="position: absolute; bottom: -26px; left: 128px; background-color: {{base_hue_lightest.value}}!important;">
+                <md-button md-menu-origin ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="open options" style="position: absolute; bottom: -26px; left: 73px; background-color: {{base_hue_lightest.value}}!important;">
                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Open Options Menu" md-font-library="material-icons">more_vert</md-icon>
                 </md-button>
 
@@ -188,7 +138,7 @@
                                 </md-list-item>
                             </md-card-content>
                             <md-card-actions layout="row" layout-align="end center" flex>
-                                <md-button class="md-raised" ng-click="overview = false; edit_info = true; file_view = true;" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">Edit Your Personal Info</md-button>
+                                <md-button class="md-raised" ng-click="overview = false; edit_info = true; file_view = false;" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">Edit Your Personal Info</md-button>
                             </md-card-actions>
                         </md-card>
                         <div flex="100" flex-gt-sm="40" layout-align="row" layout-wrap>
@@ -357,13 +307,13 @@
                                 <md-content style="padding: 0;">
                                     <div layout="column" layout-align="center stretch" style="margin: 0" flex>
                                         <md-list class="md-dense" flex>
-                                            <md-list-item ng-repeat="file in me.files | limitTo:3" class="md-2-line" flex>
+                                            <md-list-item ng-repeat="file in me.files" class="md-2-line" flex>
                                                 <div class="md-list-item-text">
                                                     <h3 style="font-size: 16px;">{{file.name || file.title}}</h3>
                                                 </div>
                                                 <md-menu class="md-secondary">
-                                                    <md-button md-menu-origin ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="open options" style=" background-color: {{primary_hue_normal.value}}!important;">
-                                                        <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Open Options Menu" md-font-library="material-icons">more_vert</md-icon>
+                                                    <md-button md-menu-origin ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="open options" style=" background-color: {{base_hue_lightest.value}}!important;">
+                                                        <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Open Options Menu" md-font-library="material-icons">more_vert</md-icon>
                                                     </md-button>
                                                     
                                                     <md-menu-content width="4">
@@ -396,6 +346,7 @@
                                                     </md-menu-content>
                                                 </md-menu>
                                             </md-list-item>
+                                            <md-divider></md-divider>
                                         </md-list>
                                         <md-list ng-if="!me.files" class="md-dense" flex>
                                             <md-list-item class="md-2-line" flex>
@@ -409,6 +360,55 @@
                             </md-card-content>
                             <md-card-actions layout="row" layout-align="end center" flex>
                                 <md-button ng-click="edit_info = false; overview = true; file_view = false;" style="color: {{base_hue_darkest.value}};">Close</md-button>
+                                <!-- =================== Upload Various Resources =================== -->
+                                <md-menu>
+                                    <md-button class="md-raised" aria-label="upload media" md-menu-origin ng-click="openMenu($mdMenu, $event)" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+                                        <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">cloud_upload</md-icon>
+                                    </md-button>
+                                    <md-menu-content width="4">
+                                        <md-menu-item>
+                                            <md-button ngf-select="uploadMyFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.doc,.docx'" ngf-accept="'.doc,.docx'" ngf-max-size="20MB">
+                                                Word Document
+                                            </md-button>
+                                        </md-menu-item>
+                                        <md-menu-item>
+                                            <md-button ngf-select="uploadMyFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.xls,.xlsx'" ngf-accept="'.xls,.xlsx'" ngf-max-size="20MB">
+                                                Excel Document
+                                            </md-button>
+                                        </md-menu-item>
+                                        <md-menu-item>
+                                            <md-button ngf-select="uploadMyFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.ppt,.pptx'" ngf-accept="'.ppt,.pptx'" ngf-max-size="20MB">
+                                                Powerpoint Document
+                                            </md-button>
+                                        </md-menu-item>
+                                        <md-menu-item>
+                                            <md-button ngf-select="uploadMyFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.pdf'" ngf-accept="'.pdf'" ngf-max-size="20MB">
+                                                PDF Document
+                                            </md-button>
+                                        </md-menu-item>
+                                        <md-menu-item>
+                                            <md-button ngf-select="uploadMyFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB">
+                                                Image
+                                            </md-button>
+                                        </md-menu-item>
+                                        <md-menu-item>
+                                            <md-button ngf-select="uploadMyFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.mp4'" ngf-accept="'video/mp4'" ngf-max-size="20MB">
+                                                MP4 Video
+                                            </md-button>
+                                        </md-menu-item>
+                                        <md-menu-item>
+                                            <md-button ngf-select="uploadMyFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.zip'" ngf-accept="'application/zip,application/x-zip-compressed'" ngf-max-size="50MB">
+                                                Zipped File
+                                            </md-button>
+                                        </md-menu-item>
+                                        <md-menu-item>
+                                            <md-button ng-click="openIframeUpload()">
+                                                Iframe
+                                            </md-button>
+                                        </md-menu-item>
+                                    </md-menu-content>
+                                </md-menu>
+                                <!-- =================== Upload Various Resources =================== -->
                             </md-card-actions>
                         </md-card>
                     </div>
