--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -345,8 +345,8 @@
                                                         </md-menu-item>
                                                     </md-menu-content>
                                                 </md-menu>
+                                                <md-divider></md-divider>
                                             </md-list-item>
-                                            <md-divider></md-divider>
                                         </md-list>
                                         <md-list ng-if="!me.files" class="md-dense" flex>
                                             <md-list-item class="md-2-line" flex>
@@ -359,12 +359,10 @@
                                 </md-content>
                             </md-card-content>
                             <md-card-actions layout="row" layout-align="end center" flex>
-                                <md-button ng-click="edit_info = false; overview = true; file_view = false;" style="color: {{base_hue_darkest.value}};">Close</md-button>
+                                <md-button ng-click="edit_info = false; overview = true; file_view = false;" style="color: {{base_hue_darkest.value}};">Close</md-button>&nbps;&nbps;
                                 <!-- =================== Upload Various Resources =================== -->
                                 <md-menu>
-                                    <md-button class="md-raised" aria-label="upload media" md-menu-origin ng-click="openMenu($mdMenu, $event)" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
-                                        <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">cloud_upload</md-icon>
-                                    </md-button>
+                                    <md-button class="md-raised" aria-label="upload media" md-menu-origin ng-click="openMenu($mdMenu, $event)" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">Upload Files</md-button>
                                     <md-menu-content width="4">
                                         <md-menu-item>
                                             <md-button ngf-select="uploadMyFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.doc,.docx'" ngf-accept="'.doc,.docx'" ngf-max-size="20MB">
