--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -157,6 +157,7 @@
                                                     <div class="md-list-item-text">
                                                         <h3 style="font-size: 16px;">{{file.name || file.title}}</h3>
                                                     </div>
+                                                    <md-divider ng-if="!$last"></md-divider>
                                                 </md-list-item>
                                             </md-list>
                                             <md-list ng-if="!me.files" class="md-dense" flex>
@@ -181,22 +182,18 @@
                                         </md-card-header-text>
                                     </md-card-header>
                                     <md-card-content>
-                                        <md-tabs md-dynamic-height md-border-bottom>
-                                            <md-tab label="Notifications">
-                                                <md-content style="padding: 0;">
-                                                    <div layout="column" layout-align="center stretch" style="margin: 0" flex>
-                                                        <md-list class="md-dense" flex>
-                                                            <md-list-item class="md-2-line" flex>
-                                                                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_upload</md-icon>
-                                                                <div class="md-list-item-text">
-                                                                    <h3 style="font-size: 16px;">No Notifications</h3>
-                                                                </div>
-                                                            </md-list-item>
-                                                        </md-list>
-                                                    </div>
-                                                </md-content>
-                                            </md-tab>
-                                        </md-tabs>
+                                        <md-content style="padding: 0;">
+                                            <div layout="column" layout-align="center stretch" style="margin: 0" flex>
+                                                <md-list class="md-dense" flex>
+                                                    <md-list-item class="md-2-line" flex>
+                                                        <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">report_problem</md-icon>
+                                                        <div class="md-list-item-text">
+                                                            <h3 style="font-size: 16px;">No Notifications</h3>
+                                                        </div>
+                                                    </md-list-item>
+                                                </md-list>
+                                            </div>
+                                        </md-content>
                                     </md-card-content>
                             </md-card>
                         </div>
@@ -345,7 +342,7 @@
                                                         </md-menu-item>
                                                     </md-menu-content>
                                                 </md-menu>
-                                                <md-divider></md-divider>
+                                                <md-divider ng-if="!$last"></md-divider>
                                             </md-list-item>
                                         </md-list>
                                         <md-list ng-if="!me.files" class="md-dense" flex>
