UX Update My Vault

--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -356,7 +356,7 @@
                                 </md-content>
                             </md-card-content>
                             <md-card-actions layout="row" layout-align="end center" flex>
-                                <md-button ng-click="edit_info = false; overview = true; file_view = false;" style="color: {{base_hue_darkest.value}};">Close</md-button>&nbps;&nbps;
+                                <md-button ng-click="edit_info = false; overview = true; file_view = false;" style="color: {{base_hue_darkest.value}};">Close</md-button>&nbsp;
                                 <!-- =================== Upload Various Resources =================== -->
                                 <md-menu>
                                     <md-button class="md-raised" aria-label="upload media" md-menu-origin ng-click="openMenu($mdMenu, $event)" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">Upload Files</md-button>
