--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -309,9 +309,8 @@
                                                     <h3 style="font-size: 16px;">{{file.name || file.title}}</h3>
                                                 </div>
                                                 <md-menu class="md-secondary">
-                                                    <md-button md-menu-origin ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="open options" style=" background-color: {{base_hue_lightest.value}}!important;">
-                                                        <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Open Options Menu" md-font-library="material-icons">more_vert</md-icon>
-                                                    </md-button>
+                                                
+                                                    <md-icon md-menu-origin ng-click="openMenu($mdMenu, $event)" style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Open Options Menu" md-font-library="material-icons">more_vert</md-icon>
                                                     
                                                     <md-menu-content width="4">
                                                         <md-menu-item>
