--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -310,7 +310,7 @@
                                                     
                                                     <md-menu-content width="4">
                                                         <md-menu-item>
-                                                            <md-button>
+                                                            <md-button style="color: {{base_hue_darkest.value}};">
                                                                 <a href="{{file.link}}" target="_blank">
                                                                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">launch</md-icon>
                                                                     Preview Resource
